--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 <section class="post-meta">
   <div class="post-date">{{ page.date | date: "%B %-d, %Y" }}</div>
   <div class="post-categories">
-  {% if page.categories.size > 0 %}in {% for cat in page.categories %}
+  {% if page.categories.size > 0 %}in {% for cat in page.categories reversed %}
     {% if site.jekyll-archives %}
     <a href="{{ site.baseurl }}/category/{{ cat }}">{{ cat | capitalize }}</a>{% if forloop.last == false %}, {% endif %}
     {% else %}
@@ -140,3 +140,8 @@ layout: default
 
 </div>
 </div>
+<script>
+  $(function (){
+    console.log('{{content}}');
+  })
+</script>
